k8s-manifests/llama3-8b-deployment/multi-adapter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llama3-multi-adapter
  labels:
    name: llama3-multi-adapter
    app.kubernetes.io/part-of: ai-inference
    app.kubernetes.io/component: llm-multi-adapter
